[package]
name = "ppm_decode"
version = "0.1.1"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "Parser for the Pulse Position Modulation (PPM) radio control (RC) protocol"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/ppm_decode"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "PPM",
    "CPPM",
    "PPMSUM",
    "FrSky",
]

[dependencies]
